# skiing_weather

./: .gitignore  package-lock.json  package.json
client/: package-lock.json  package.json
client/src/: App.tsx
client/src/WorldMap/: WorldMap.tsx  customMapStyles.json
client/src/assets/: IconPaths.ts
client/src/components/WorldMap/: IconLayer.ts  WorldMap.tsx
client/src/components/menu/: CustomIcon.tsx  IconPaths.ts  MenuCard.tsx  MenuContainer.tsx  MountainStats.tsx  PieChart.tsx  ResortDisplay.tsx  ResortFeatures.tsx  SeasonPricing.tsx  SlopesLifts.tsx  TextGroup.tsx  TextItem.tsx  TriangleContainer.tsx  WeatherCard.tsx
client/src/components/menu/WeatherCard/: CurrentConditions.tsx  DailyConditions.tsx  HourlyConditions.tsx  WeatherCard.tsx  WeatherIcon.tsx
client/src/hooks/menu/: WeatherInterfaces.ts  WeatherParser.ts  useWeatherCard.tsx
client/src/menu/: MenuContainer.tsx  MenuTemplate.tsx  ResortDisplay.tsx
data/: resorts.json
scripts/: DataScrubber.py  JSONConverter.py
server/: Cargo.toml
server/src/: WrappedF32.rs  indexer.rs  main.rs  parser.rs  requests.rs
src/: App.tsx
src/WorldMap/: WorldMap.tsx  defaultMapPosition.ts
