[package]
name = "server"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.95"
axum = "0.8.1"
dotenv = "0.15.0"
serde = { version = "1.0.217", features = ["derive"] }
tokio = { version = "1.43.0", features = ["rt-multi-thread"] }
serde_json = "1.0.138"
lazy_static = "1.5.0"


[dev-dependencies]
tower = "0.5.2"
hyper = "1.6.0"
serde_json = "1.0.138"
